--- a/app/src/main/res/layout/dialog_change_amount.xml
+++ b/app/src/main/res/layout/dialog_change_amount.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
-    android:layout_height="180dp"
+    android:layout_width="250dp"
+    android:layout_height="200dp"
     android:layout_below="@+id/rlSeries"
     android:layout_gravity="center"
-    android:layout_marginTop="10dp">
-
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="5dp">
 
     <TextView
         android:id="@+id/tvCode"
@@ -97,11 +97,12 @@
 
     <Button
         android:id="@+id/bOK"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:layout_below="@+id/rlAmount"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="5dp"
         android:text="OK" />
 
 </RelativeLayout>
