--- a/app/src/main/res/layout/fragment_new_position.xml
+++ b/app/src/main/res/layout/fragment_new_position.xml
@@ -17,6 +17,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center_horizontal"
             android:orientation="vertical">
 
 
@@ -177,79 +178,71 @@
 
 
             <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp">
+                android:id="@+id/rlAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="30dp"
+                >
 
-                <RelativeLayout
-                    android:id="@+id/rlAmount"
+                <ImageView
+                    android:id="@+id/imgRemoveAmount"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_toEndOf="@+id/textAmount"
+                    android:layout_toRightOf="@+id/textAmount"
+                    android:background="@drawable/circle_shape"
+                    android:onClick="onClickRemoveAmountStandard"
+                    android:src="@drawable/ic_remove_circle_black_24dp"
+                    android:tint="@color/red200"/>
+
+                <EditText
+                    android:id="@+id/etAmount"
                     android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_centerInParent="true"
-                    android:layout_marginTop="30dp"
-                    >
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@+id/imgRemoveAmount"
+                    android:layout_toRightOf="@+id/imgRemoveAmount"
+                    android:gravity="center"
+                    android:inputType="numberDecimal"
+                    android:maxWidth="110dp"
+                    android:minEms="5"
+                    android:minWidth="30dp"
+                    android:singleLine="true"
+                    android:text="1"
+                    android:textColor="@color/greyText"
+                    android:textColorHint="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
 
-                    <ImageView
-                        android:id="@+id/imgRemoveAmount"
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_toEndOf="@+id/textAmount"
-                        android:layout_toRightOf="@+id/textAmount"
-                        android:background="@drawable/circle_shape"
-                        android:onClick="onClickRemoveAmountStandard"
-                        android:src="@drawable/ic_remove_circle_black_24dp"
-                        android:tint="@color/red200"/>
+                <ImageView
+                    android:id="@+id/imgAddAmount"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_alignTop="@+id/imgRemoveAmount"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_toEndOf="@+id/etAmount"
+                    android:layout_toRightOf="@+id/etAmount"
+                    android:alpha="1"
+                    android:background="@drawable/circle_shape"
+                    android:onClick="onClickAddAmountStandard"
+                    android:src="@drawable/ic_add_circle_black_24dp"
+                    android:tint="@color/teal200"/>
 
-                    <TextView
-                        android:id="@+id/tvAmount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignTop="@+id/textAmount"
-                        android:layout_toEndOf="@+id/imgRemoveAmount"
-                        android:layout_toRightOf="@+id/imgRemoveAmount"
-                        android:gravity="center"
-                        android:maxLength="10"
-                        android:maxWidth="110dp"
-                        android:minEms="3"
-                        android:minWidth="30dp"
-                        android:singleLine="true"
-                        android:text="1"
-                        android:textColor="@color/greyText"
-                        android:textColorHint="@color/white"
-                        android:textSize="17dp"
-                        android:textStyle="bold"/>
-
-                    <ImageView
-                        android:id="@+id/imgAddAmount"
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
-                        android:layout_alignTop="@+id/imgRemoveAmount"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginStart="5dp"
-                        android:layout_toEndOf="@+id/tvAmount"
-                        android:layout_toRightOf="@+id/tvAmount"
-                        android:alpha="1"
-                        android:background="@drawable/circle_shape"
-                        android:onClick="onClickAddAmountStandard"
-                        android:src="@drawable/ic_add_circle_black_24dp"
-                        android:tint="@color/teal200"/>
-
-                    <TextView
-                        android:id="@+id/textAmount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_centerVertical="true"
-                        android:alpha="1"
-                        android:text="@string/amount"
-                        android:textColor="@color/grey3"
-                        android:textSize="18dp"/>
-                </RelativeLayout>
-
+                <TextView
+                    android:id="@+id/textAmount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:alpha="1"
+                    android:text="@string/amount"
+                    android:textColor="@color/grey3"
+                    android:textSize="18dp"/>
             </RelativeLayout>
 
             <RelativeLayout
