Added handling of ActionBar.

--- a/app/src/main/res/layout/fragment_new_position.xml
+++ b/app/src/main/res/layout/fragment_new_position.xml
@@ -165,9 +165,10 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:hint="@string/enter_name"
-                        android:inputType="textMultiLine"
+                        android:inputType="text"
+                        android:singleLine="true"
                         android:nextFocusUp="@+id/etCode"
-                        android:imeOptions="actionNext"
+                        android:imeOptions="actionDone"
                         android:text=""
                         android:textColorHint="@color/clearWhite"
                         android:textColor="@color/white"
