--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -1,34 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:gravity="top"
-    android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:gravity="top"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/logo"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginTop="56dp"
-        android:src="@drawable/icminwentory_title" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/icminwentory_title"/>
 
     <TextView
+        android:id="@+id/info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/logo"
         android:gravity="center|top"
         android:text="@string/company_info"
-        android:textAlignment="center" />
+        android:textAlignment="center"/>
 
     <TextView
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/info"
+        android:autoLink="web"
         android:gravity="center|top"
         android:linksClickable="true"
-        android:autoLink="web"
-        android:textColorLink="@color/blue400"
         android:text="@string/website"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textColorLink="@color/blue400"/>
 
-</LinearLayout>
+    <Button
+        android:id="@+id/back"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp"
+        android:text="@string/back"
+        android:textSize="17dp"
+        />
+</RelativeLayout>
 
