--- a/app/src/main/res/layout/fragment_choose_location.xml
+++ b/app/src/main/res/layout/fragment_choose_location.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             android:background="@color/grey1">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/grey1">
+
     <TextView
         android:id="@+id/tvLokalization"
         android:layout_width="match_parent"
@@ -13,80 +14,64 @@
         android:gravity="center"
         android:text="@string/choose_location"
         android:textColor="@color/white"
-        android:textStyle="bold"
         android:textSize="18dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_locations"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_height="0dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="110dp"
+        android:layout_marginEnd="10dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="10dp"
         android:fadingEdge="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/addNewLocationMenu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvLokalization"
-        android:clipToPadding="false"
-        android:paddingBottom="85dp">
+        app:layout_constraintTop_toBottomOf="@+id/tvLokalization">
+
     </android.support.v7.widget.RecyclerView>
 
-    <!--<com.github.clans.fab.FloatingActionMenu-->
-        <!--android:id="@+id/addNewLocationMenu"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentEnd="true"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_marginEnd="@dimen/default_margin"-->
-        <!--android:layout_marginBottom="21dp"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:menu_buttonSpacing="@dimen/x_small_margin"-->
-        <!--app:menu_colorNormal="@color/grenade"-->
-        <!--app:menu_colorPressed="@color/grenade_dark"-->
-        <!--app:menu_labels_colorNormal="@color/white"-->
-        <!--app:menu_labels_cornerRadius="@dimen/default_margin"-->
-        <!--app:menu_labels_position="left"-->
-        <!--app:menu_labels_style="@style/TimeLineAddEventsMenuLabel">-->
-
-    <!--<com.github.clans.fab.FloatingActionButton-->
-        <!--android:id="@+id/add_medication_intake"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:src="@drawable/ic_timeline_medication_purple"-->
-        <!--app:fab_colorNormal="@android:color/transparent"-->
-        <!--app:fab_colorPressed="@android:color/transparent"-->
-        <!--app:fab_label="@string/medicament_intake"-->
-        <!--app:fab_showShadow="false"-->
-        <!--app:fab_size="mini" />-->
-
-    <!--<com.github.clans.fab.FloatingActionButton-->
-        <!--android:id="@+id/add_medical_visit"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:src="@drawable/ic_medical_visit_timeline"-->
-        <!--app:fab_colorNormal="@android:color/transparent"-->
-        <!--app:fab_colorPressed="@android:color/transparent"-->
-        <!--app:fab_label="@string/medical_visit"-->
-        <!--app:fab_showShadow="false"-->
-        <!--app:fab_size="mini" />-->
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/addNewLocation"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="25dp"
-        android:layout_marginEnd="25dp"
-        android:src="@drawable/ic_plus_white_18dp"
-        app:backgroundTint="@color/colorLogo"
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/addNewLocationMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="21dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:menu_buttonSpacing="4dp"
+        app:menu_colorNormal="@color/colorYellowLight"
+        app:menu_colorPressed="@color/colorYellowLight"
+        app:menu_labels_colorNormal="@color/white"
+        app:menu_labels_cornerRadius="16dp"
+        app:menu_labels_position="left"
+        app:menu_labels_style="@style/LocationMenuLabel">
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/addNewLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_plus_white_36dp"
+            app:fab_colorNormal="@android:color/transparent"
+            app:fab_colorPressed="@android:color/transparent"
+            app:fab_label="Dodaj nową lokalizację"
+            app:fab_showShadow="false"
+            app:fab_size="mini" />
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/scanNewLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_scan"
+            app:fab_colorNormal="@android:color/transparent"
+            app:fab_colorPressed="@android:color/transparent"
+            app:fab_label="Skanuj lokalizację"
+            app:fab_showShadow="false"
+            app:fab_size="mini" />
+
+    </com.github.clans.fab.FloatingActionMenu>
 
 </android.support.constraint.ConstraintLayout>
