--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,12 @@
         <item name="colorAccent">@color/blue200</item>
     </style>
 
+    <style name="LocationMenuLabel">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="MyMaterialTheme" parent="MyMaterialTheme.Base">
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:windowContentTransitions">true</item>
