--- a/app/src/main/res/layout/fragment_choose_location.xml
+++ b/app/src/main/res/layout/fragment_choose_location.xml
@@ -51,6 +51,17 @@
         app:menu_labels_style="@style/LocationMenuLabel">
 
         <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/importLocationFile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_plus_white_36dp"
+            app:fab_colorNormal="@android:color/transparent"
+            app:fab_colorPressed="@android:color/transparent"
+            app:fab_label="Importuj plik lokalizacji"
+            app:fab_showShadow="false"
+            app:fab_size="mini" />
+
+        <com.github.clans.fab.FloatingActionButton
             android:id="@+id/addNewLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
