--- a/app/src/main/res/layout/fragment_choose_location.xml
+++ b/app/src/main/res/layout/fragment_choose_location.xml
@@ -9,12 +9,12 @@
         android:id="@+id/tvLokalization"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_marginTop="?attr/actionBarSize"
         android:gravity="center"
         android:text="@string/choose_location"
         android:textColor="@color/white"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,15 +24,28 @@
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
+        android:clipToPadding="false"
+        android:paddingBottom="70dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="10dp"
         android:fadingEdge="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/addNewLocationMenu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvLokalization">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvLokalization">
 
     </android.support.v7.widget.RecyclerView>
+
+    <View
+        android:id="@+id/animatedView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0"
+        android:animateLayoutChanges="true"
+        android:background="@color/black"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/addNewLocationMenu"
