--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -45,8 +45,8 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_below="@id/tvLocation"
-        android:layout_marginTop="8dp"
         android:buttonTint="@color/grey1"
+        android:checked="true"
         app:layout_constraintEnd_toEndOf="@+id/labelScanned"
         app:layout_constraintStart_toStartOf="@+id/labelScanned"
         app:layout_constraintTop_toBottomOf="@+id/tvLocation"/>
@@ -64,8 +64,8 @@
         android:id="@+id/checkBoxHandle"
         android:layout_width="35dp"
         android:layout_height="35dp"
+        android:checked="true"
         android:layout_below="@id/tvLocation"
-        android:layout_marginTop="8dp"
         android:buttonTint="@color/grey1"
         app:layout_constraintEnd_toEndOf="@+id/labelHandle"
         app:layout_constraintStart_toStartOf="@+id/labelHandle"
